classDiagram
    direction LR

    class User {
        - UUID id
        - String email
        - String passwordHash
        - PlatformRole role
    }

    class Project {
        - UUID id
        - String name
        - UUID teamId
        - String k8sNamespace
    }

    class Application {
        - UUID id
        - String name
        - UUID projectId
        - String gitRepoUrl
        - String buildBranch
        - Integer containerPort
    }

    class Build {
        - UUID id
        - UUID applicationId
        - BuildStatus status
        - String imageTag
        - Instant startTime
    }

    class Deployment {
        - UUID id
        - UUID applicationId
        - String version
        - DeploymentStatus status
        - String ingressUrl
    }

    %% Cross-Module Connections (Handled via UUID in code)
    User "1" ..> "1..*" Project
    Project "1" ..> "1..*" Application
    Application "1" ..> "1..*" Build
    Build "1" ..> "1" Deployment



